overflow fixed

--- a/src/Components/Carousel/styles.css
+++ b/src/Components/Carousel/styles.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     font-family: 'Martel', serif;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   
   .swiper-slide {
